--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="Vue Laravel Auth"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:oWVyv4oRW0gEMyK1NcwMV0cqgqZmASYWJL7P4MPCsDw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://auth-api.test
+FRONTEND_URL=http://app.auth-api.test:8080
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,25 +12,25 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=authapi
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_DRIVER=file # file, cookie
+SESSION_LIFETIME=525600 #minite
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
+# http://192.168.56.56:8025/ mailhog
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_HOST=localhost
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
@@ -56,3 +57,10 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+SANCTUM_EXPIRATION="${SESSION_LIFETIME}" # minite
+SESSION_DOMAIN=.auth-api.test #api
+SANCTUM_STATEFUL_DOMAINS=app.auth-api.test:8080,app2.auth-api.test:8080 #app
+AUTH_TOKEN_HASH=token
+APP_TIMEZONE=UTC #UTC "Asia/Dhaka"
