--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME="Vue Laravel Auth"
 APP_ENV=local
 APP_KEY=base64:oWVyv4oRW0gEMyK1NcwMV0cqgqZmASYWJL7P4MPCsDw=
 APP_DEBUG=true
-APP_URL=http://auth-api.test
-FRONTEND_URL=http://app.auth-api.test:8080
+APP_URL=http://app.auth-api.test
+FRONTEND_URL=http://auth-api.test:8080
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -61,6 +61,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SANCTUM_EXPIRATION="${SESSION_LIFETIME}" # minite
 SESSION_DOMAIN=.auth-api.test #api
-SANCTUM_STATEFUL_DOMAINS=app.auth-api.test:8080,app2.auth-api.test:8080 #app
+SANCTUM_STATEFUL_DOMAINS=auth-api.test:8080 #app
 AUTH_TOKEN_HASH=token
 APP_TIMEZONE=UTC #UTC "Asia/Dhaka"
