--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Vue Laravel Auth"
 APP_ENV=local
 APP_KEY=base64:oWVyv4oRW0gEMyK1NcwMV0cqgqZmASYWJL7P4MPCsDw=
 APP_DEBUG=true
-APP_URL=http://app.auth-api.test
+APP_URL=http://api.auth-api.test
 FRONTEND_URL=http://auth-api.test:8080
 
 LOG_CHANNEL=stack
