dingo api and sanctum

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,15 @@ SESSION_DOMAIN=.auth-api.test #api
 SANCTUM_STATEFUL_DOMAINS=auth-api.test:8080 #app
 AUTH_TOKEN_HASH=token
 APP_TIMEZONE=UTC #UTC "Asia/Dhaka"
+
+
+API_STANDARDS_TREE=x
+API_SUBTYPE=dingoapi
+API_PREFIX=api
+API_DOMAIN=api.auth-api.test
+API_VERSION=v1
+API_NAME=dingoapi
+API_CONDITIONAL_REQUEST=false
+API_STRICT=false
+API_DEFAULT_FORMAT=json
+API_DEBUG=true
